# serialize

./: .gitignore  Cargo.toml  README.md
serialize_derive/src/: lib.rs
src/: lib.rs  test.rs
