[package]
name = "serialize"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This package allow for the serialization and deserialization of things"
repository  = "https://github.com/DragonXexe/serialize"
keywords = ["serialize", "save"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
