[package]
name = "serialr"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "This package allows for the serialization and deserialization of things"
repository  = "https://github.com/DragonXexe/serialize"
keywords = ["serialize", "save", "deserialize"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
